move fitmodel directory namespace

--- a/DATA/TargetedMetabolomics/TargetedMetabolomics.vbproj
+++ b/DATA/TargetedMetabolomics/TargetedMetabolomics.vbproj
@@ -160,6 +160,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="QuantitativeAnalysis\FitModel.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
@@ -223,8 +224,6 @@
       <Name>MassSpectrum.math-core</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="QuantitativeAnalysis\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
