--- a/DATA/TargetedMetabolomics/test/test.vbproj
+++ b/DATA/TargetedMetabolomics/test/test.vbproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{0B0FFA68-2708-4A3A-BC46-A110345BD325}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <StartupObject>test.test</StartupObject>
+    <StartupObject>test.Module1</StartupObject>
     <RootNamespace>test</RootNamespace>
     <AssemblyName>test</AssemblyName>
     <FileAlignment>512</FileAlignment>
