--- a/.gitmodules
+++ b/.gitmodules
@@ -4,8 +4,8 @@
 
 
 [submodule "KCF"]
-	path = KCF
+	path = visual/KCF
 	url = https://github.com/xieguigang/KEGG.molDraw.git
 [submodule "KEGG_canvas"]
-	path = KEGG_canvas
+	path = visual/KEGG_canvas
 	url = https://github.com/GCModeller-Cloud/KEGG-metabolite-network.git
