--- a/DATA/TargetedMetabolomics/TargetedMetabolomics.vbproj
+++ b/DATA/TargetedMetabolomics/TargetedMetabolomics.vbproj
@@ -127,6 +127,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ContentUnits.vb" />
+    <Compile Include="GCMS\StandardCurve.vb" />
     <Compile Include="GCMS\ReaderExtensions.vb" />
     <Compile Include="GCMS\Raw.vb" />
     <Compile Include="GCMS\QuantifyAnalysis.vb" />
@@ -140,7 +141,7 @@
     <Compile Include="MRM\Data\Extensions.vb" />
     <Compile Include="MRM\Data\TargetQuantification.vb" />
     <Compile Include="MRM\QuantitativeAnalysis\MRMPeak.vb" />
-    <Compile Include="MRM\QuantitativeAnalysis\FitModel.vb" />
+    <Compile Include="QuantitativeAnalysis\ContentResult.vb" />
     <Compile Include="QuantitativeAnalysis\PeakArea.vb" />
     <Compile Include="MRM\Standards.vb" />
     <Compile Include="MRM\IS.vb" />
