--- a/DATA/TargetedMetabolomics/TargetedMetabolomics.vbproj
+++ b/DATA/TargetedMetabolomics/TargetedMetabolomics.vbproj
@@ -142,6 +142,7 @@
     <Compile Include="MRM\Data\TargetQuantification.vb" />
     <Compile Include="MRM\QuantitativeAnalysis\MRMPeak.vb" />
     <Compile Include="QuantitativeAnalysis\ContentResult.vb" />
+    <Compile Include="QuantitativeAnalysis\TPAExtensions.vb" />
     <Compile Include="QuantitativeAnalysis\PeakArea.vb" />
     <Compile Include="MRM\Standards.vb" />
     <Compile Include="MRM\IS.vb" />
