--- a/DATA/ms2_simulator/test/test.vbproj
+++ b/DATA/ms2_simulator/test/test.vbproj
@@ -132,10 +132,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\GCModeller\src\runtime\sciBASIC#\Data_science\DataMining\DynamicProgramming\DynamicProgramming.vbproj">
-      <Project>{a903b744-c08d-4869-bc35-3dd25e36aa16}</Project>
-      <Name>DynamicProgramming</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\..\..\GCModeller\src\runtime\sciBASIC#\Data_science\Mathematica\Math\DataFittings\DataFittings.vbproj">
       <Project>{fc125b0d-1942-496f-b502-9c0eb80e35b6}</Project>
       <Name>DataFittings</Name>
@@ -151,18 +147,6 @@
     <ProjectReference Include="..\..\..\..\GCModeller\src\runtime\sciBASIC#\Microsoft.VisualBasic.Core\47-dotnet_Microsoft.VisualBasic.vbproj">
       <Project>{fecce1fd-e1d4-49e3-a668-60bb5e7aed99}</Project>
       <Name>47-dotnet_Microsoft.VisualBasic</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Assembly\assembly\assembly.vbproj">
-      <Project>{95f7d65e-9db1-4605-9fd3-25433277af88}</Project>
-      <Name>assembly</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\KCF\KCF.Graph\KCF.Graph.vbproj">
-      <Project>{c60416d4-b3e2-45e5-bfe0-90d5021647f9}</Project>
-      <Name>KCF.Graph</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\KCF\KCF.IO\KCF.IO.vbproj">
-      <Project>{1bafa2bc-68b2-4ee0-9235-c60fae3377a0}</Project>
-      <Name>KCF.IO</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\..\GCModeller\src\runtime\sciBASIC#\Data\DataFrame\47_dotnet_ms-vb_data.framework.vbproj">
       <Project>{7283c179-f852-4ead-8d8f-b82ef2cbd7db}</Project>
@@ -180,13 +164,17 @@
       <Project>{3291389c-ea87-4b33-a9a5-65a2d60ba3e2}</Project>
       <Name>physics</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\runtime\zlibnet\src\zlibnet.vbproj">
-      <Project>{075e1da3-54ac-4d7c-9d4e-e34aa13910a8}</Project>
-      <Name>zlibnet</Name>
+    <ProjectReference Include="..\..\..\visual\KCF\KCF.Graph\KCF.Graph.vbproj">
+      <Project>{c60416d4-b3e2-45e5-bfe0-90d5021647f9}</Project>
+      <Name>KCF.Graph</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\ms2_math-core\ms2_math-core.vbproj">
+    <ProjectReference Include="..\..\..\visual\KCF\KCF.IO\KCF.IO.vbproj">
+      <Project>{1bafa2bc-68b2-4ee0-9235-c60fae3377a0}</Project>
+      <Name>KCF.IO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\ms2_math-core\MassSpectrum.math-core.vbproj">
       <Project>{a2130297-2b4a-4b02-80b2-5cfa860f6dae}</Project>
-      <Name>ms2_math-core</Name>
+      <Name>MassSpectrum.math-core</Name>
     </ProjectReference>
     <ProjectReference Include="..\ms2_simulator.vbproj">
       <Project>{77683884-edf0-4c48-9d7c-b4343a561fd7}</Project>
