--- a/.gitmodules
+++ b/.gitmodules
@@ -2,10 +2,9 @@
 	path = Assembly/ProteoWizard.d/httpd
 	url = https://github.com/xieguigang/SMRUCC.WebCloud.git
 
-
-[submodule "KEGG_canvas"]
-	path = visual/KEGG_canvas
-	url = https://github.com/GCModeller-Cloud/KEGG-metabolite-network.git
 [submodule "visual/KCF"]
 	path = visual/KCF
 	url = https://github.com/xieguigang/KEGG.molDraw.git
+[submodule "visual/KEGG_canvas"]
+	path = visual/KEGG_canvas
+	url = https://github.com/GCModeller-Cloud/KEGG-metabolite-network.git
