--- a/DATA/Massbank/Massbank.vbproj
+++ b/DATA/Massbank/Massbank.vbproj
@@ -210,6 +210,7 @@
     <Compile Include="Public\MoNA\MoNAJson.vb" />
     <Compile Include="Public\NCBI\PubChem\MetaData.vb" />
     <Compile Include="Public\NCBI\PubChem\ImageFly.vb" />
+    <Compile Include="Public\NCBI\PubChem\Web\PugView.vb" />
     <Compile Include="Public\NCBI\PubChem\Web\Query.vb" />
     <Compile Include="Public\TMIC\FooDB\Food.vb" />
     <Compile Include="Public\TMIC\FooDB\StoredProcedure.vb" />
