--- a/DATA/Massbank/Massbank.vbproj
+++ b/DATA/Massbank/Massbank.vbproj
@@ -211,6 +211,7 @@
     <Compile Include="Public\NCBI\PubChem\MetaData.vb" />
     <Compile Include="Public\NCBI\PubChem\ImageFly.vb" />
     <Compile Include="Public\NCBI\PubChem\Web\Components.vb" />
+    <Compile Include="Public\NCBI\PubChem\Web\Extensions.vb" />
     <Compile Include="Public\NCBI\PubChem\Web\PugView.vb" />
     <Compile Include="Public\NCBI\PubChem\Web\Query.vb" />
     <Compile Include="Public\TMIC\FooDB\Food.vb" />
