split source file

--- a/DATA/ms2_math-core/MassSpectrum.math-core.vbproj
+++ b/DATA/ms2_math-core/MassSpectrum.math-core.vbproj
@@ -150,7 +150,9 @@
     <Compile Include="Ms1\PrecursorType\Provider.vb" />
     <Compile Include="Ms1\PrecursorType\MolWeight.vb" />
     <Compile Include="Ms1\PrecursorType\MzCalculator.vb" />
-    <Compile Include="Ms1\Tolerance.vb" />
+    <Compile Include="Ms1\Tolerance\PPM.vb" />
+    <Compile Include="Ms1\Tolerance\DeltaMass.vb" />
+    <Compile Include="Ms1\Tolerance\Tolerance.vb" />
     <Compile Include="Spectra\SpectraEncoder.vb" />
     <Compile Include="Spectra\PeakMs2.vb" />
     <Compile Include="Spectra\LibraryMatrixExtensions.vb" />
@@ -205,8 +207,6 @@
       <Name>47-dotnet_Microsoft.VisualBasic</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Ms1\Tolerance\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
