parse bounds connection

--- a/DATA/Massbank/Massbank.vbproj
+++ b/DATA/Massbank/Massbank.vbproj
@@ -204,6 +204,8 @@
     <Compile Include="InChI\Layers.vb" />
     <Compile Include="InChI\InChI.vb" />
     <Compile Include="InChI\Extensions.vb" />
+    <Compile Include="InChI\Components.vb" />
+    <Compile Include="InChI\InChIKey.vb" />
     <Compile Include="MetaLib\KEGGExtensions.vb" />
     <Compile Include="MetaLib\NaturalLanguageTerm.vb" />
     <Compile Include="MetaLib\NameEquality.vb" />
