add spectra tree creator

--- a/Assembly/assembly/assembly.vbproj
+++ b/Assembly/assembly/assembly.vbproj
@@ -146,6 +146,7 @@
     <Compile Include="ASCII\Peaks.vb" />
     <Compile Include="ASCII\MSP\Comments.vb" />
     <Compile Include="ASCII\MSP\MspData.vb" />
+    <Compile Include="Class1.vb" />
     <Compile Include="MarkupData\IBase64Container.vb" />
     <Compile Include="MarkupData\MS1.vb" />
     <Compile Include="MarkupData\mzML\XML\Spectrum.vb" />
