fix for method reference errors

--- a/DATA/SDF.Extensions/SDF.Extensions.vbproj
+++ b/DATA/SDF.Extensions/SDF.Extensions.vbproj
@@ -127,7 +127,7 @@
       <Project>{fecce1fd-e1d4-49e3-a668-60bb5e7aed99}</Project>
       <Name>+Microsoft.VisualBasic.Architecture.Framework</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\KCF\KCF.IO\KCF.IO.vbproj">
+    <ProjectReference Include="..\..\visual\KCF\KCF.IO\KCF.IO.vbproj">
       <Project>{1bafa2bc-68b2-4ee0-9235-c60fae3377a0}</Project>
       <Name>KCF.IO</Name>
     </ProjectReference>
