code style improvements for compares meta info equaliants

--- a/DATA/Massbank/Massbank.vbproj
+++ b/DATA/Massbank/Massbank.vbproj
@@ -207,6 +207,7 @@
     <Compile Include="InChI\Components.vb" />
     <Compile Include="InChI\InChIKey.vb" />
     <Compile Include="MetaLib\KEGGExtensions.vb" />
+    <Compile Include="MetaLib\MetaEquals.vb" />
     <Compile Include="MetaLib\NaturalLanguageTerm.vb" />
     <Compile Include="MetaLib\NameEquality.vb" />
     <Compile Include="MetaLib\MetaLib.vb" />
