--- a/DATA/MoNA/MoNA.vbproj
+++ b/DATA/MoNA/MoNA.vbproj
@@ -65,10 +65,11 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MSP\MetaData.vb" />
+    <Compile Include="MetaData.vb" />
+    <Compile Include="MSP\MspReader.vb" />
     <Compile Include="SDF\SDFReader.vb" />
-    <Compile Include="SDF\SpectraSection.vb" />
-    <Compile Include="MSP\NamespaceDoc.vb" />
+    <Compile Include="SpectraSection.vb" />
+    <Compile Include="NamespaceDoc.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -84,8 +85,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="MSP\ReaderViews.vb" />
-    <Compile Include="MSP\UnionReader.vb" />
+    <Compile Include="ReaderViews.vb" />
+    <Compile Include="UnionReader.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
