--- a/DATA/ms2_math-core/MassSpectrum.math-core.vbproj
+++ b/DATA/ms2_math-core/MassSpectrum.math-core.vbproj
@@ -153,6 +153,7 @@
     <Compile Include="Ms1\Tolerance\PPM.vb" />
     <Compile Include="Ms1\Tolerance\DeltaMass.vb" />
     <Compile Include="Ms1\Tolerance\Tolerance.vb" />
+    <Compile Include="Spectra\Models\Fragments.vb" />
     <Compile Include="Spectra\SpectraEncoder.vb" />
     <Compile Include="Spectra\Models\PeakMs2.vb" />
     <Compile Include="Spectra\LibraryMatrixExtensions.vb" />
