--- a/DATA/XrefEngine/XrefEngine.vbproj
+++ b/DATA/XrefEngine/XrefEngine.vbproj
@@ -114,6 +114,10 @@
       <Project>{7283c179-f852-4ead-8d8f-b82ef2cbd7db}</Project>
       <Name>47_dotnet_ms-vb_data.framework</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\GCModeller\src\runtime\sciBASIC#\Data\SearchEngine\Index\Index.vbproj">
+      <Project>{A0E37308-0007-4578-B006-905B9042AFDE}</Project>
+      <Name>Index</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\GCModeller\src\runtime\sciBASIC#\Microsoft.VisualBasic.Core\47-dotnet_Microsoft.VisualBasic.vbproj">
       <Project>{fecce1fd-e1d4-49e3-a668-60bb5e7aed99}</Project>
       <Name>47-dotnet_Microsoft.VisualBasic</Name>
