read chemical descriptor data

--- a/DATA/Massbank/Massbank.vbproj
+++ b/DATA/Massbank/Massbank.vbproj
@@ -234,18 +234,19 @@
     <Compile Include="Public\TMIC\HMDB\Spectra\NMR1D.vb" />
     <Compile Include="Public\TMIC\HMDB\Spectra\MSMS.vb" />
     <Compile Include="Public\TMIC\HMDB\Spectra\CMS.vb" />
+    <Compile Include="Public\TMIC\HMDB\Tables\ChemicalDescriptor.vb" />
     <Compile Include="SDF\ChemicalDescriptor.vb" />
     <Compile Include="SDF\SDFParser.vb" />
     <Compile Include="SDF\Struct\Enums.vb" />
     <Compile Include="SDF\Struct\Elements.vb" />
     <Compile Include="SDF\Extensions.vb" />
-    <Compile Include="Public\TMIC\HMDB\BriefTable.vb" />
+    <Compile Include="Public\TMIC\HMDB\Tables\MetaDBTable.vb" />
     <Compile Include="Public\TMIC\HMDB\Assembly\property.vb" />
     <Compile Include="Public\TMIC\HMDB\Assembly\disease.vb" />
     <Compile Include="Public\lipidMAPS\MapsHelper.vb" />
     <Compile Include="SDF\Struct\Mol.vb" />
     <Compile Include="SDF\SDF.vb" />
-    <Compile Include="Public\TMIC\HMDB\NameValue.vb" />
+    <Compile Include="Public\TMIC\HMDB\Tables\NameValue.vb" />
     <Compile Include="Public\TMIC\HMDB\Extensions.vb" />
     <Compile Include="Public\TMIC\HMDB\Assembly\taxonomy.vb" />
     <Compile Include="Public\TMIC\HMDB\Assembly\metabolite.vb" />
