move models to model directory

--- a/DATA/Massbank/Massbank.vbproj
+++ b/DATA/Massbank/Massbank.vbproj
@@ -215,15 +215,16 @@
     <Compile Include="MetaLib\Models\MetaLib.vb" />
     <Compile Include="Concentration.vb" />
     <Compile Include="Public\lipidMAPS\SDF.vb" />
+    <Compile Include="Public\NCBI\PubChem\Web\Module1.vb" />
     <Compile Include="Public\NCBI\SDFExtensions.vb" />
     <Compile Include="Public\NCBI\PubChem\CIDSynonym.vb" />
     <Compile Include="Public\NCBI\PubChem\MetaData.vb" />
     <Compile Include="Public\NCBI\PubChem\ImageFly.vb" />
     <Compile Include="Public\NCBI\PubChem\SIDMap.vb" />
-    <Compile Include="Public\NCBI\PubChem\Web\InformationSection.vb" />
+    <Compile Include="Public\NCBI\PubChem\Web\Models\InformationSection.vb" />
     <Compile Include="Public\NCBI\PubChem\Web\Extensions.vb" />
-    <Compile Include="Public\NCBI\PubChem\Web\Information.vb" />
-    <Compile Include="Public\NCBI\PubChem\Web\PugView.vb" />
+    <Compile Include="Public\NCBI\PubChem\Web\Models\Information.vb" />
+    <Compile Include="Public\NCBI\PubChem\Web\Models\PugView.vb" />
     <Compile Include="Public\NCBI\PubChem\Web\Query.vb" />
     <Compile Include="Public\TMIC\HMDB\MetaReference\BioSamples.vb" />
     <Compile Include="Public\TMIC\HMDB\MetaReference\RepositoryExtensions.vb" />
