--- a/DATA/ms2_math-core/MassSpectrum.math-core.vbproj
+++ b/DATA/ms2_math-core/MassSpectrum.math-core.vbproj
@@ -147,6 +147,8 @@
     <Compile Include="Chromatogram\ROI.vb" />
     <Compile Include="Extensions.vb" />
     <Compile Include="Ms1\PrecursorType\Extensions.vb" />
+    <Compile Include="Ms1\PrecursorType\Formula\Negative.vb" />
+    <Compile Include="Ms1\PrecursorType\Formula\Positive.vb" />
     <Compile Include="Ms1\PrecursorType\Provider.vb" />
     <Compile Include="Ms1\PrecursorType\MolWeight.vb" />
     <Compile Include="Ms1\PrecursorType\MzCalculator.vb" />
