--- a/DATA/Massbank/test/test.vbproj
+++ b/DATA/Massbank/test/test.vbproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{2223FB63-E148-4342-87E6-495571B2898E}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <StartupObject>test.oboTest</StartupObject>
+    <StartupObject>test.nameTest</StartupObject>
     <RootNamespace>test</RootNamespace>
     <AssemblyName>test</AssemblyName>
     <FileAlignment>512</FileAlignment>
@@ -95,6 +95,7 @@
     <Compile Include="foodbQuery.vb" />
     <Compile Include="inchiTest.vb" />
     <Compile Include="metaLibLoaderTest.vb" />
+    <Compile Include="nameTest.vb" />
     <Compile Include="oboTest.vb" />
     <Compile Include="pubchemTest.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
