--- a/DATA/XrefEngine/XrefEngine.vbproj
+++ b/DATA/XrefEngine/XrefEngine.vbproj
@@ -107,6 +107,7 @@
   <ItemGroup>
     <Compile Include="ChemOntClassify.vb" />
     <Compile Include="ClassyfireAnnotation.vb" />
+    <Compile Include="FillClass.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
